Update look to reddish, remove unused links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,15 +3,9 @@
 
   {% include head.html %}
 
-  <body>
+  <body class="theme-base-08">
     
     {% include sidebar.html %}
-
-    <nav>
-      <a href="{{ site.baseurl }}/">English</a> |
-      <a href="{{ site.baseurl }}/index.zh.html">中文</a>
-    </nav>
-
 
     <div class="content container">
       {{ content }}
