--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,4 +26,7 @@
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+
+  <link rel="icon" href="{{ site.baseurl }}/favicon.ico">
+  {% seo %}
 </head>
